--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -64,7 +64,7 @@
 <nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
     <div class="w3-margin ">
         <div class="w3-center " style="margin-top:8px !important">
-            <img class="w3-center w3-closenav w3-xlarge " src="avatar/man-with-tie.png"
+            <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
                  id="admin-img"
                  style="width:100px ; height:100px"/>
         </div>
