--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -61,7 +61,7 @@
 
 
 </style>
-<nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
+<nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
     <div class="w3-margin ">
         <div class="w3-center " style="margin-top:8px !important">
             <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
