[rightMenu for patron and admin with diffrence property created]

--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -61,6 +61,7 @@
 
 
 </style>
+
 <nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
     <div class="w3-margin ">
         <div class="w3-center " style="margin-top:8px !important">
@@ -69,7 +70,7 @@
                  style="width:100px ; height:100px"/>
         </div>
         <br/>
-        <a href="editprofile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
+        <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
         <br/>
         <a class="rightMenuColor" onclick="myFunction('Demo1')">
             <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
@@ -84,13 +85,13 @@
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
+            <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
                                                                   style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
                 من </a>
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
+            <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
                                                                   style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
             </a>
         </div>
@@ -102,19 +103,20 @@
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
+            <a href="supportPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
                                                                   style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی
             </a>
         </div>
         <br/>
         <div class="rightMenuColor">
-            <a href="~/Admin/Logout" class="rightMenuColor"><span class="glyphicon glyphicon-off"
+            <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-off"
                                                                   style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
             </a>
         </div>
         <br/>
     </div>
 </nav>
+
 <header class="w3-container navigationBarColor ">
     <span class="w3-opennav w3-xlarge w3-right" id="rightMenu_open_btn">&#9776;</span>
     <div class="text-center">
