--- a/addPoll.html
+++ b/addPoll.html
@@ -113,44 +113,62 @@
             border-color: #006DA0 !important;
         }
     </style>
-    <nav class="w3-sidenav w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
+
+    <nav class="w3-sidenav w3-mobile w3-card-16 w3-animate-right " style="display:block;background-color:#2F3438" id="rightMenu">
         <div class="w3-margin ">
             <div class="w3-center " style="margin-top:8px !important">
-                <img class="w3-center w3-closenav w3-xlarge " src="avatar/man-with-tie.png" style="width:100px ; height:100px" />
+                <img class="w3-center w3-closenav w3-xlarge w3-circle" src="avatar/man-with-tie.png"
+                     id="admin-img"
+                     style="width:100px ; height:100px"/>
             </div>
-            <br />
-            <a href="editprofile.html" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
-            <br />
+            <br/>
+            <a href="editProfile.html" class="rightMenuColor w3-center" id="admin-name"> &nbsp;نام کاربر</a>
+            <br/>
             <a class="rightMenuColor" onclick="myFunction('Demo1')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
-                &nbsp;<span class="glyphicon glyphicon-chevron-down " id="more" style="color:#7B8084;margin-top:2px"></span>
+                &nbsp;<span class="glyphicon glyphicon-chevron-down" id="more" style="color:#7B8084;margin-top:2px"></span>
             </a>
             <div id="Demo1" class="w3-container w3-hide ">
-                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه اول</a>
-                <a href="showShop.html" class="rightMenuColor">&nbsp; فروشگاه دوم</a>
-                <a href="showShop.html" class="rightMenuColor"> &nbsp;فروشگاه سوم </a>
-                <a href="addShop.html" class="w3-center rightMenuColor">
-                    <span class="glyphicon glyphicon-plus"></span> &nbsp;جدید&nbsp;
+                <a class="rightMenuColor" href="showShop.html"> &nbsp;فروشگاه اول</a>
+                <a class="rightMenuColor" href="#">&nbsp; فروشگاه دوم</a>
+                <a class="rightMenuColor" href="#"> &nbsp;فروشگاه سوم </a>
+                <a class="w3-center rightMenuColor" href="addShop.html"> <span class="glyphicon glyphicon-plus"></span>
+                    &nbsp;جدید&nbsp;</a>
+            </div>
+            <br/>
+            <div class="rightMenuColor">
+                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
+                                                         style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
+                    من </a>
+            </div>
+            <br/>
+            <div class="rightMenuColor">
+                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
+                                                         style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
                 </a>
             </div>
-            <br />
+            <br/>
             <div class="rightMenuColor">
-                <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal" style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های من </a>
-            </div><br />
+                <a href="advertisementPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
+                                                                              style="color:#7B8084"></span>&nbsp;&nbsp;
+                    تبلیغات </a>
+            </div>
+            <br/>
             <div class="rightMenuColor">
-                <a href="ShowDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd" style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من </a>
-            </div><br />
+                <a href="supportPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
+                                                                        style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی
+                </a>
+            </div>
+            <br/>
             <div class="rightMenuColor">
-                <a href="advertisementPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; تبلیغات </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="support.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone" style="color:#7B8084"></span>&nbsp;&nbsp; پشنیبانی </a>
-            </div><br />
-            <div class="rightMenuColor">
-                <a href="HomePage.html" class="rightMenuColor"><span class="glyphicon glyphicon-off" style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل </a>
-            </div><br />
+                <a href="#" class="rightMenuColor"><span class="glyphicon glyphicon-off"
+                                                         style="color:#7B8084"></span>&nbsp;&nbsp; خروج از پنل
+                </a>
+            </div>
+            <br/>
         </div>
     </nav>
+
     <header class="w3-container navigationBarColor ">
         <span class="w3-opennav w3-xlarge w3-right" id="rightMenu_open_btn">&#9776;</span>
         <div class="text-center">
