--- a/completeInfo.html
+++ b/completeInfo.html
@@ -119,7 +119,7 @@
                 <img class="w3-center w3-closenav w3-xlarge " src="avatar/man-with-tie.png" style="width:100px ; height:100px" />
             </div>
             <br />
-            <a href="editprofile.html" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
+            <a href="editProfile.html" class="rightMenuColor w3-center"> &nbsp;نام کاربر</a>
             <br />
             <a class="rightMenuColor" onclick="myFunction('Demo1')">
                 <span class="glyphicon glyphicon-home" style="color:#7B8084"></span>&nbsp;&nbsp;فروشگاه های من
