[condition for entire as admin or patron added]

--- a/AdminMainPage.html
+++ b/AdminMainPage.html
@@ -155,7 +155,7 @@
         // alert(window.sessionStorage.avatar);
         //در غیر اینصورت ها گذاشته شود
         $("#admin-img").attr("src", window.sessionStorage.avatar);
-        $("#admin-name").text(window.sessionStorage.lastName+ " " + window.sessionStorage.firstName);
+        $("#admin-name").text(window.sessionStorage.firstName+ " " + window.sessionStorage.lastName);
         //فروشگاه ها رو هم میخواهم
 
         // function getCookie(name) {
